# aoc24

./: .gitignore  CMakeLists.txt  bench.sh  input.sh  readme.md
.helix/: config.toml  languages.toml
d01/: CMakeLists.txt  main.c
d02/: CMakeLists.txt  main.c
d03/: CMakeLists.txt  main.c
d04/: CMakeLists.txt  main.c
d05/: CMakeLists.txt  main.c
inc/: sort.h  types.h
inc/util/: arr.h  file.h  log.h  parse.h  ray.h  sort.h  todo.h
util/: CMakeLists.txt  arr.c  file.c  parse.c  sort.c
